Develop BridgeLabz-HTML_Page

--- a/learnhtmlcss/pages/new_sample.html
+++ b/learnhtmlcss/pages/new_sample.html
@@ -45,7 +45,7 @@
  </head>
  <body>
     <h1>BridgeLabz is cool</h1>
-    <img src="C:\Users\hp\Documents\Repository\HTML-CSS\learnhtmlcss\assets\BridgelabzImage.jpeg" alt="Hover Text." width="25%" />
+    <img src="C:\Users\hp\Documents\Repository\HTML_CSS\learnhtmlcss\pages\new_sample.html" alt="Hover Text." width="25%" />
     <p> At Bridgelabz, We're a techie community of</p>
     <ul>
         <li>Technologists</li>
