--- a/learnhtmlcss/pages/simple_form.html
+++ b/learnhtmlcss/pages/simple_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Basic input types</title>
-    <link rel="stylesheet" href="..\css\simple_form.css">
+    <link rel="stylesheet" href="..\css\simple_form.css"> 
 </head>
 <body>
     <form>
@@ -32,7 +32,7 @@
         </div>
         <div>
             <label for="number">Telephone input type: </label>
-            <input type="number" id="number" name="tel">
+            <input type="number" id="number" name="number">
         </div>
         <div>
             <label for="search">Search input type: </label>
